--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,17 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itext7-core</artifactId>
             <version>7.1.15</version>
             <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
         </dependency>
     </dependencies>
 </project>
